bin_PROGRAMS=streamer

streamer_SOURCES=main.cpp

streamer_CPPFLAGS=-I../libs -DBOOST_ALL_DYN_LINK $(PTHREAD_CFLAGS) $(BOOST_CPPFLAGS)
streamer_LDADD=-lpthread $(PTHREAD_LIBS) $(BOOST_LDFLAGS) $(BOOST_ASIO_LIB) $(BOOST_LOG_LIB) $(BOOST_FILESYSTEM_LIB) $(BOOST_PROGRAM_OPTIONS_LIB) $(BOOST_IOSTREAMS_LIB) $(BOOST_THREAD_LIB)
